--- a/content/feb-15-2021.md
+++ b/content/feb-15-2021.md
@@ -3,9 +3,9 @@ title: Links for feb-15-2021
 author: Carl Sampson
 type: post
 date: 2021-02-15
-url: /links-for-feb-15-2021/
+url: /links/links-for-feb-15-2021/
 tags: ["links"]
-summary: 26 links I found interesting today.  [Details](/links-for-feb-15-2021/)
+summary: 26 links I found interesting today.  [Details](/links/links-for-feb-15-2021/)
 
 ---
 
