--- a/content/jan-20-2021.md
+++ b/content/jan-20-2021.md
@@ -3,7 +3,7 @@ title: Links for jan-20-2021
 author: Carl Sampson
 type: post
 date: 2021-01-20
-url: /links-for-jan-20-2021/
+url: /links/links-for-jan-20-2021/
 tags: ["links"]
 summary: Links I found interesting today.  Click the title above to see more details.
 
