--- a/content/jan-26-2021.md
+++ b/content/jan-26-2021.md
@@ -3,9 +3,9 @@ title: Links for jan-26-2021
 author: Carl Sampson
 type: post
 date: 2021-01-26
-url: /links-for-jan-26-2021/
+url: /links/links-for-jan-26-2021/
 tags: ["links"]
-summary: 13 links I found interesting today.  [Details](/links-for-jan-26-2021/)
+summary: 13 links I found interesting today.  [Details](/links/links-for-jan-26-2021/)
 
 ---
 
