--- a/content/feb-24-2021.md
+++ b/content/feb-24-2021.md
@@ -3,9 +3,9 @@ title: Links for feb-24-2021
 author: Carl Sampson
 type: post
 date: 2021-02-24
-url: /links-for-feb-24-2021/
+url: /links/links-for-feb-24-2021/
 tags: ["links"]
-summary: 24 links I found interesting today.  [Details](/links-for-feb-24-2021/)
+summary: 24 links I found interesting today.  [Details](/links/links-for-feb-24-2021/)
 
 ---
 
