--- a/content/jan-17-2021.md
+++ b/content/jan-17-2021.md
@@ -3,7 +3,7 @@ title: Links for jan-17-2021
 author: Carl Sampson
 type: post
 date: 2021-01-17
-url: /links-for-jan-17-2021/
+url: /links/links-for-jan-17-2021/
 tags: ["links"]
 ---
 
