--- a/content/jan-18-2021.md
+++ b/content/jan-18-2021.md
@@ -3,7 +3,7 @@ title: Links for jan-18-2021
 author: Carl Sampson
 type: post
 date: 2021-01-18
-url: /links-for-jan-18-2021/
+url: /links/links-for-jan-18-2021/
 tags: ["links"]
 
 ---
