--- a/content/jan-22-2021.md
+++ b/content/jan-22-2021.md
@@ -3,9 +3,9 @@ title: Links for jan-22-2021
 author: Carl Sampson
 type: post
 date: 2021-01-22
-url: /links-for-jan-22-2021/
+url: /links/links-for-jan-22-2021/
 tags: ["links"]
-summary: 10 links I found interesting today.  [Details](/links-for-jan-22-2021/)
+summary: 10 links I found interesting today.  [Details](/links/links-for-jan-22-2021/)
 
 ---
 
