--- a/content/jan-24-2021.md
+++ b/content/jan-24-2021.md
@@ -3,9 +3,9 @@ title: Links for jan-24-2021
 author: Carl Sampson
 type: post
 date: 2021-01-24
-url: /links-for-jan-24-2021/
+url: /links/links-for-jan-24-2021/
 tags: ["links"]
-summary: 58 links I found interesting today.  [Details](/links-for-jan-24-2021/)
+summary: 58 links I found interesting today.  [Details](/links/links-for-jan-24-2021/)
 
 ---
 
