--- a/content/mar-09-2021.md
+++ b/content/mar-09-2021.md
@@ -3,9 +3,9 @@ title: Links for mar-09-2021
 author: Carl Sampson
 type: post
 date: 2021-03-09
-url: /links-for-mar-09-2021/
+url: /links/links-for-mar-09-2021/
 tags: ["links"]
-summary: 24 links I found interesting today.  [Details](/links-for-mar-09-2021/)
+summary: 24 links I found interesting today.  [Details](/links/links-for-mar-09-2021/)
 
 ---
 
