--- a/content/links/jul-24-2023.md
+++ b/content/links/jul-24-2023.md
@@ -24,3 +24,4 @@ summary: 16 links I found interesting today.  [Details](/links/links-for-jul-24-
 - [SSRF payloads](https://pravinponnusamy.medium.com/ssrf-payloads-f09b2a86a8b4)
 - [🔥 ssrf-king 🔥](https://github.com/ethicalhackingplayground/ssrf-king)
 
+- [The Mac Security Blog](https://www.intego.com/mac-security-blog/how-to-run-windows-11-for-free-on-an-m1-or-m2-mac/)
